tests/algorithms/x/Java/graphs/dijkstra_binary_grid.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden419_dijkstra_binary_grid912236010/001/Main.java:56: error: method concat in class Main cannot be applied to given types;
            dx = ((int[])(concat(dx, new int[]{-1, -1, 1, 1})));
                          ^
  required: T[],T[]
  found:    int[],int[]
  reason: inference variable T has incompatible bounds
    equality constraints: int
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
/tmp/TestJavaTranspiler_Algorithms_Golden419_dijkstra_binary_grid912236010/001/Main.java:57: error: method concat in class Main cannot be applied to given types;
            dy = ((int[])(concat(dy, new int[]{-1, 1, -1, 1})));
                          ^
  required: T[],T[]
  found:    int[],int[]
  reason: inference variable T has incompatible bounds
    equality constraints: int
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
2 errors
